--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body>
+<body style="background-color:red">
 <h1>Calamardo</h1>
 <img src="calamar.jpg"/>
 <p>djfglhkdjfjhk dkjfghkfjgkfjldkgjldgjldfk fdlkjldkfjldjgflk jd</p>
